--- a/src/main/webapp/datatable.xhtml
+++ b/src/main/webapp/datatable.xhtml
@@ -9,11 +9,20 @@
 
 <h:body>
     <p:dataTable var="user" value="#{dataTableView.users}">
-        <p:column headerText="Name">
-            <h:outputText value="#{user.userName}"/>
+        <p:column headerText="First Name">
+            <h:outputText value="#{user.firstName}"/>
+        </p:column>
+        <p:column headerText="Last Name">
+            <h:outputText value="#{user.lastName}"/>
+        </p:column>
+        <p:column headerText="DOB">
+            <h:outputText value="#{user.dob}"/>
         </p:column>
         <p:column headerText="Email">
             <h:outputText value="#{user.email}"/>
+        </p:column>
+        <p:column headerText="Occupation">
+            <h:outputText value="#{user.occupation}"/>
         </p:column>
     </p:dataTable>
 </h:body>
